# reactnative-jsi-espark

./: CONTRIBUTING.md  README.md  package.json  react-native-bikegadget-mainapp.podspec  tsconfig.json
ReproducerApp/: app.json  package-lock.json  package.json
ReproducerApp/android/: settings.gradle
ReproducerApp/android/app/: build.gradle
ReproducerApp/android/app/src/main/java/com/bikegadgetmainappexample/: MainActivity.kt  MainApplication.kt
ReproducerApp/android/app/src/main/res/values/: strings.xml
ReproducerApp/ios/: File.swift  Podfile
ReproducerApp/ios/BikegadgetMainappExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ReproducerApp/ios/BikegadgetMainappExample.xcodeproj/: project.pbxproj
ReproducerApp/ios/BikegadgetMainappExample.xcodeproj/xcshareddata/xcschemes/: BikegadgetMainappExample.xcscheme
ReproducerApp/ios/BikegadgetMainappExampleTests/: BikegadgetMainappExampleTests.m
ReproducerApp/src/: App.tsx
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bikegadgetmainapp/: BikegadgetMainappModule.java  BikegadgetMainappPackage.java
cpp/: react-native-bikegadget-mainapp.cpp  react-native-bikegadget-mainapp.h
ios/: BikegadgetMainapp.h  BikegadgetMainapp.mm
src/: NativeBikegadgetMainapp.ts  index.tsx
